<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/bg2"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.arc.agni.tictactoe.activities.PlayScreenActivity">

    <LinearLayout
        android:id="@+id/settings_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/settings"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/ic_settings"
            android:onClick="openSettings" />

        <TextView
            android:id="@+id/music"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/ic_music_on"
            android:onClick="muteAndUnmuteSound"
            android:visibility="gone" />

        <TextView
            android:id="@+id/restart"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/ic_reset_game"
            android:onClick="restartGame"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        card_view:layout_constraintBottom_toTopOf="@+id/ps_adView"
        card_view:layout_constraintTop_toBottomOf="@+id/settings_layout"
        tools:layout_editor_absoluteX="0dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/round_card"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            card_view:cardCornerRadius="7dp"
            card_view:cardElevation="3dp"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/round_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/red"
                android:gravity="center"
                android:text="@string/round"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/play_card_cardview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/transparent"
            card_view:cardElevation="15dp"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/play_card"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/transparent"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="3">

                <LinearLayout
                    android:id="@+id/game_win_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/game_win_message"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1.6"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:text="@string/player_2"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="25sp" />

                    <pl.droidsonroids.gif.GifImageView
                        android:id="@+id/dance_gif"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:src="@drawable/group_dance" />

                    <ImageView
                        android:id="@+id/go_to_home"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.4"
                        android:onClick="goToHome"
                        android:src="@drawable/ic_action_home" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/row1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:id="@+id/index0"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/ic_plain_layout"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="onClickIndex0"
                        android:orientation="horizontal" />

                    <LinearLayout
                        android:id="@+id/index1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/ic_plain_layout"
                        android:onClick="onClickIndex1"
                        android:orientation="horizontal" />

                    <LinearLayout
                        android:id="@+id/index2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/ic_plain_layout"
                        android:onClick="onClickIndex2"
                        android:orientation="horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/row2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:id="@+id/index3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/ic_plain_layout"
                        android:onClick="onClickIndex3"
                        android:orientation="horizontal" />

                    <LinearLayout
                        android:id="@+id/index4"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/ic_plain_layout"
                        android:onClick="onClickIndex4"
                        android:orientation="horizontal" />

                    <LinearLayout
                        android:id="@+id/index5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/ic_plain_layout"
                        android:onClick="onClickIndex5"
                        android:orientation="horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/row3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:id="@+id/index6"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/ic_plain_layout"
                        android:onClick="onClickIndex6"
                        android:orientation="horizontal" />

                    <LinearLayout
                        android:id="@+id/index7"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/ic_plain_layout"
                        android:onClick="onClickIndex7"
                        android:orientation="horizontal" />

                    <LinearLayout
                        android:id="@+id/index8"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/ic_plain_layout"
                        android:onClick="onClickIndex8"
                        android:orientation="horizontal" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/player_card"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            card_view:cardCornerRadius="7dp"
            card_view:cardElevation="3dp"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/round_win_message_outline"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/round_win_message"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/gray_outline"
                    android:gravity="center"
                    android:text="@string/player_1"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/player_tiles"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/player_1_details"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/blue"
                    android:orientation="vertical"
                    android:weightSum="2.5">

                    <TextView
                        android:id="@+id/player_1_name"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/player_1"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/player_1_score"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:text="@string/player_1_score"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/player_2_details"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/green"
                    android:orientation="vertical"
                    android:weightSum="2.5">

                    <TextView
                        android:id="@+id/player_2_name"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/player_2"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/player_2_score"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:text="@string/player_2_score"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/ps_adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        card_view:adSize="SMART_BANNER"
        card_view:adUnitId="@string/ad_unit_id"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>